# chopsticks-tui

./: .gitignore  Cargo.toml  README.md
.superpowers/brainstorm/28051-1781342136/state/: server-stopped
src/: chopsticks.rs  contracts.rs  lib.rs  main.rs  session.rs
src/app/: input.rs  mod.rs  resilience.rs
src/chain/: blocks.rs  client.rs  dev_rpc.rs  mod.rs  storage_catalog.rs  storage_fetch.rs
src/fixtures/: mod.rs  polkadot_metadata.scale
src/render/: diff.rs  mod.rs  value.rs
src/views/: build_panel.rs  call_catalog.rs  command_registry.rs  connection.rs  grid.rs  hint_bar.rs  mod.rs  palette.rs  picker.rs  sessions.rs  set_storage.rs  tx_builder.rs
tests/: e2e.rs
tests/common/: mod.rs
